[metadata]
name = napari-UniSPAC
version = attr: napari_UniSPAC.__version__
description = A Unified Segmentation framework for Proofreading and Annotation in Connectomics (UniSPAC)!
long_description = file:README.md
url = https://github.com/ddd9898/UniSPAC
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-UniSPAC = napari_UniSPAC:napari.yaml
    
[options.package_data]
* = *.yaml
